<resources>
    <string name="app_name">Secured Wallet</string>
    <string name="about_me"><u>About Me</u></string>
    <string name="Disclaimer"><u>Disclaimer</u></string>
    <string name="usingAtYourOwnRisk">Using Secured Wallet is at your own risk.</string>
    <string name="wasCreatedBy">Secured Wallet was created by Yinnon Bratspiess.</string>
    <string name="noResponsible">We are not responsible for direct, indirect, incidental or consequential damages that can occur upon using Secured Wallet.</string>
    <string name="noGuarantee">There is no kind of guarantee whatsoever given by Secured Wallet for your data and in case it was stolen or lost it is only your own responsibility.</string>
    <string name="close">Close</string>
    <string name="aboutSecuredWallet">About Secured Wallet</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="createANewUser">Create A New User</string>
    <string name="showPassword">Show password</string>
    <string name="login">Login</string>
    <string name="createAUser">Create a user</string>
    <string name="mailTo"><![CDATA[<a href="mailto:securedwalletapp@gmail.com?subject=feedback">Contact Me</a>]]></string>
    <string name="pleaseEnterKeyAndValue"><![CDATA[Please Enter A Key & A Value]]></string>
    <string name="sureToCancel">Are you sure you want to cancel ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pleaseEnterUserAndPass">Please Enter Username And Password</string>
    <string name="userAlreadyExists">Username already exists</string>
    <string name="wasCreated">" was created"</string>
    <string name="noChangeWasMade">No change was made</string>
    <string name="SecuredWallet">" Secured Wallet"</string>
    <string name="seemsLikeItsEmpty">Seems like it\'s empty</string>
    <string name="delete">Delete</string>
    <string name="sureToDelete">"Are you sure you want to delete "</string>
    <string name="wasRemoved">" was removed"</string>
    <string name="edit">Edit</string>
    <string name="deleteUser">Delete User</string>
    <string name="areYouSureYouWantToRemoveYourself">Are you sure you want to remove yourself from the database ?</string>
    <string name="logout">Logout</string>
    <string name="areYouSureYouWantToLogout">Are you sure you want to logout ?</string>
    <string name="loggedOutSuccessfully">Logged out successfully</string>
    <string name="itemWithTheSameKeyAlreadyExists">Item with the same key already exists</string>
    <string name="itemWasEditedSuccessfully">Item was edited successfully</string>
    <string name="couldntEditItemAlreadyExists">Could\'nt edit item because an item with the same key is already exists</string>
    <string name="welcome">Welcome !</string>
    <string name="welcomeMessage">Welcome to Secured Wallet and thanks for your choice ! \nSecured Wallet provides you a simple solution for storing your personal info on your device.\nPlease notice that all of your data is saved only on the current device and is not stored on cloud so you won\'t be able to see it on other devices.\nMoreover, Secured Wallet can work offline. No internet connection is needed in order to use Secured Wallet.\nClick on \'Next\' button for a quick guide before you dive in.</string>
    <string name="next">Next</string>
    <string name="welcome2Message">Before starting you have to create a user.\nCreating a new user is very easy. All you have to do is just to provide the desired username and password.\nOn the main screen press \'Create a new user\' button and create one for yourself.\nPlease notice that a username is unique. You cannot have two users with the same name on your device.\n</string>
    <string name="items">Items</string>
    <string name="letsGo">Let\'s Go !</string>
    <string name="welcome3Message">Congratulations, you know how to create a new user !\nAnd now, for our easy to use wallet !\nAll you have to do is just enter your desired items. This can be simply done by clicking on \'add item\' which located on the menu.\nItem is composed from two simple strings. The first one is the <b>key</b> for your item and the second one is the <b>value</b>.\n<b>Key</b> is the name of your item, For example \'Visa card\'.\n<b>Value</b> is the info you want to store about your item, For example for the key \'Visa card\' we can store its personal code \'1234\'.\nAfter adding an item you can easily edit and delete it by long click on it.\nPlease notice that a key is unique. You cannot have two items with the same key on one wallet.\nSimple !</string>
    <string name="disclaimerMessage">Using Secured Wallet is at your own risk.\nWe are not responsible for direct, indirect, incidental or consequential damages that can occur upon using Secured Wallet.\nThere is no kind of guarantee whatsoever given by Secured Wallet for your data and in case it was stolen or lost it is only your own responsibility.</string>
    <string name="termsOfUse"><u>Terms of use</u></string>
    <string name="readAndAcceptTerms">Read and accept terms of use</string>
    <string name="invalidUser">Invalid User</string>
    <string name="pleaseEnterValidUserAndPass">Please enter a valid user and password</string>
    <string name="exit">Exit</string>
    <string name="areYouSureYouWantToLeave">Are you sure you want to leave ?</string>
    <string name="search"> Search</string>
    <string name="copy">Copy</string>
    <string name="valueWasCopied">Value was copied to the clipbaord</string>
    <string name="rate">"Rate "</string>
    <string name="rateSecuredWallet"><b>Rate Secured Wallet</b></string>
</resources>
