<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/items"
        android:id="@+id/textView13"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/welcome3NextBtn"
        android:layout_below="@+id/textView14"
        android:layout_alignRight="@+id/textView14"
        android:layout_alignEnd="@+id/textView14"
        android:layout_marginTop="59dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome3Message"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView13"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp" />

</RelativeLayout>