<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="il.ac.huj.todolist.TodoListManagerActivity">

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/usernameText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:layout_below="@+id/usernameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:hint="@string/password"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginBtn"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAUser"
        android:id="@+id/createUserButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:src="@drawable/login_icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
</RelativeLayout>
